- 반차기능 추가 - 프로그램 설치, 종료 시 서비스 자동등록 해제기능 추가

--- a/WorkTimeCheckAlarmService/WorkTimeCheckAlarmService.csproj
+++ b/WorkTimeCheckAlarmService/WorkTimeCheckAlarmService.csproj
@@ -123,7 +123,9 @@
     <Content Include="Notice.txt">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
-    <Content Include="WorkTimeCheck.png" />
+    <Content Include="WorkTimeCheckAlram_Create.exe" />
+    <Content Include="WorkTimeCheckAlram_Delete.exe" />
+    <Content Include="출퇴근체크로직.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
